Email template update, profile dropdown update and hiding new group creation

--- a/built-email-templates/newUserWelcome.html
+++ b/built-email-templates/newUserWelcome.html
@@ -12,8 +12,7 @@
     }
   }
   END_CONFIG
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+--><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,11 +72,11 @@
                     <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left">Welcome to Keyy!</p>
                     <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left">Keyy is a platform built to keep you connected with the learning groups you care about, all in
                       one simple feed.</p>
-                    <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left">If you want to discover learning groups, head on over to our <a href="https://learn.keyy.org/explore?utm_source=email&amp;utm_campaign=welcome-email" style="color:#7B16FF; text-decoration:none">Explore
+                    <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left">If you want to discover learning groups, head on over to our <a href="https://learn.keyy.org/explore?utm_source=email&amp;utm_campaign=welcome-email" style="color:#34D1C3; text-decoration:none">Explore
                         page</a> to see what's popular and new.</p>
-                    <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left">We're also posting regularly in <a href="https://learn.keyy.org/spectrum?utm_source=email&amp;utm_campaign=welcome-email" style="color:#7B16FF; text-decoration:none">our
-                        own learning group</a>, which is a great place to <a href="https://learn.keyy.org/spectrum/feature-requests?utm_source=email&amp;utm_campaign=welcome-email" style="color:#7B16FF; text-decoration:none">request
-                        new features</a> or <a href="https://learn.keyy.org/spectrum/hugs-n-bugs?utm_source=email&amp;utm_campaign=welcome-email" style="color:#7B16FF; text-decoration:none">report
+                    <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left">We're also posting regularly in <a href="https://learn.keyy.org/keyy-support?utm_source=email&amp;utm_campaign=welcome-email" style="color:#34D1C3; text-decoration:none">our
+                        own learning group</a>, which is a great place to <a href="https://learn.keyy.org/keyy-support/ideas?utm_source=email&amp;utm_campaign=welcome-email" style="color:#34D1C3; text-decoration:none">request
+                        new features</a> or <a href="https://learn.keyy.org/keyy-support/bugs?utm_source=email&amp;utm_campaign=welcome-email" style="color:#34D1C3; text-decoration:none">report
                         any bugs you might find.</a></p>
                     <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left">In the meantime, we're looking forward to seeing you around!</p>
                   </td>
@@ -91,7 +90,7 @@
 
                 <tr>
                   <td class="footer-cell" style="word-break:break-word">
-                    <a class="button" href="https://learn.keyy.org?utm_source=email&amp;utm_campaign=welcome-email" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#7B16FF; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all" bgcolor="#7B16FF" align="center">Go to my
+                    <a class="button" href="https://learn.keyy.org?utm_source=email&amp;utm_campaign=welcome-email" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#34D1C3; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all" bgcolor="#34D1C3" align="center">Go to my
                       dashboard</a>
                   </td>
                 </tr>
@@ -107,11 +106,11 @@
               </p>
               <ul style="line-height:1.4; margin:24px 0; padding:0; text-align:left; list-style-type:none" align="left">
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://twitter.com/withgrindery" style="color:#1D2129; text-decoration:none">Follow @withgrindery on Twitter</a>
+                  <a href="https://twitter.com/keyyedu" style="color:#1D2129; text-decoration:none">Follow @KeyyEdu on Twitter</a>
                 </li>
 
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://learn.keyy.org/spectrum/hugs-n-bugs" style="color:#1D2129; text-decoration:none">Report bugs</a> · <a href="https://learn.keyy.org/spectrum/feature-requests" style="color:#1D2129; text-decoration:none">Request
+                  <a href="https://learn.keyy.org/keyy-support/bugs" style="color:#1D2129; text-decoration:none">Report bugs</a> · <a href="https://learn.keyy.org/keyy-support/ideas" style="color:#1D2129; text-decoration:none">Request
                     a feature</a>
                 </li>
               </ul>
