--- a/built-email-templates/privateChannelRequestSent.html
+++ b/built-email-templates/privateChannelRequestSent.html
@@ -12,8 +12,7 @@
     }
   }
   END_CONFIG
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+--><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -87,9 +86,9 @@
                 <!-- Body content -->
                 <tr>
                   <td class="content-cell" style="word-break:break-word">
-                    <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left"><a href="https://learn.keyy.org/users/{{ data.user.username }}" style="color:#7B16FF; text-decoration:none">{{data.user.name}}</a> has
-                      requested to join the <a href="https://learn.keyy.org/{{ data.community.slug }}/{{ data.channel.slug }}" style="color:#7B16FF; text-decoration:none">{{data.channel.name}}
-                        channel</a> in the <a href="https://learn.keyy.org/{{ data.community.slug }}" style="color:#7B16FF; text-decoration:none">{{data.community.name}}
+                    <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left"><a href="https://learn.keyy.org/users/{{ data.user.username }}" style="color:#34D1C3; text-decoration:none">{{data.user.name}}</a> has
+                      requested to join the <a href="https://learn.keyy.org/{{ data.community.slug }}/{{ data.channel.slug }}" style="color:#34D1C3; text-decoration:none">{{data.channel.name}}
+                        channel</a> in the <a href="https://learn.keyy.org/{{ data.community.slug }}" style="color:#34D1C3; text-decoration:none">{{data.community.name}}
                         learning group</a>. You can approve or block this request in your channel settings.</p>
                   </td>
                 </tr>
@@ -99,7 +98,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-actions multi" style="padding:32px 0">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" style="word-break:break-word; padding-right:16px">
-                          <a href="https://learn.keyy.org/{{ data.community.slug }}/{{ data.channel.slug }}/settings" class="button" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#7B16FF; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all; width:100%" bgcolor="#7B16FF" align="center" width="100%">
+                          <a href="https://learn.keyy.org/{{ data.community.slug }}/{{ data.channel.slug }}/settings" class="button" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#34D1C3; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all; width:100%" bgcolor="#34D1C3" align="center" width="100%">
                             Go to channel settings
                           </a>
                         </td>
@@ -132,11 +131,11 @@
 
               <ul style="line-height:1.4; margin:24px 0; padding:0; text-align:left; list-style-type:none" align="left">
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://twitter.com/withgrindery" style="color:#1D2129; text-decoration:none">Follow @withgrindery on Twitter</a>
+                  <a href="https://twitter.com/keyyedu" style="color:#1D2129; text-decoration:none">Follow @KeyyEdu on Twitter</a>
                 </li>
 
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://learn.keyy.org/spectrum/hugs-n-bugs" style="color:#1D2129; text-decoration:none">Report bugs</a> · <a href="https://learn.keyy.org/spectrum/feature-requests" style="color:#1D2129; text-decoration:none">Request
+                  <a href="https://learn.keyy.org/keyy-support/bugs" style="color:#1D2129; text-decoration:none">Report bugs</a> · <a href="https://learn.keyy.org/keyy-support/ideas" style="color:#1D2129; text-decoration:none">Request
                     a feature</a>
                 </li>
               </ul>
