--- a/built-email-templates/validate-community-administrator-email.html
+++ b/built-email-templates/validate-community-administrator-email.html
@@ -12,8 +12,7 @@
     }
   }
   END_CONFIG
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+--><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -81,7 +80,7 @@
 
                 <tr>
                   <td class="footer-cell" style="word-break:break-word">
-                    <a class="button" href="https://learn.keyy.org/api/email/validate?token={{ validateToken }}" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#7B16FF; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all" bgcolor="#7B16FF" align="center">Confirm
+                    <a class="button" href="https://learn.keyy.org/api/email/validate?token={{ validateToken }}" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#34D1C3; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all" bgcolor="#34D1C3" align="center">Confirm
                       email address</a>
                   </td>
                 </tr>
@@ -98,11 +97,11 @@
 
               <ul style="line-height:1.4; margin:24px 0; padding:0; text-align:left; list-style-type:none" align="left">
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://twitter.com/withgrindery" style="color:#1D2129; text-decoration:none">Follow @withgrindery on Twitter</a>
+                  <a href="https://twitter.com/keyyedu" style="color:#1D2129; text-decoration:none">Follow @KeyyEdu on Twitter</a>
                 </li>
 
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://learn.keyy.org/spectrum/hugs-n-bugs" style="color:#1D2129; text-decoration:none">Report bugs</a> · <a href="https://learn.keyy.org/spectrum/feature-requests" style="color:#1D2129; text-decoration:none">Request
+                  <a href="https://learn.keyy.org/keyy-support/bugs" style="color:#1D2129; text-decoration:none">Report bugs</a> · <a href="https://learn.keyy.org/keyy-support/ideas" style="color:#1D2129; text-decoration:none">Request
                     a feature</a>
                 </li>
               </ul>
