--- a/built-email-templates/weeklyDigest.html
+++ b/built-email-templates/weeklyDigest.html
@@ -75,7 +75,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-title" style="padding:0">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" style="word-break:break-word">
-                          <a href="https://learn.keyy.org/thread/{{ id }}" class="block" style="color:#7B16FF; text-decoration:none; display:block; width:100%" width="100%">
+                          <a href="https://learn.keyy.org/thread/{{ id }}" class="block" style="color:#34D1C3; text-decoration:none; display:block; width:100%" width="100%">
                             <h3 style="color:#16171A; font-size:16px; font-weight:500; margin-top:0; text-align:left; line-height:1.4; margin-bottom:0" align="left">{{content.title}}</h3>
                           </a>
                         </td>
@@ -116,7 +116,7 @@
                 </tr>
                 <tr>
                   <td style="word-break:break-word">
-                    <a class="button" href="https://learn.keyy.org" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#7B16FF; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all" bgcolor="#7B16FF" align="center">See more conversations</a>
+                    <a class="button" href="https://learn.keyy.org" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#34D1C3; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all" bgcolor="#34D1C3" align="center">See more conversations</a>
                   </td>
                 </tr>
                 {{/data.hasOverflowThreads}}
@@ -172,7 +172,7 @@
 
                 <tr>
                   <td style="word-break:break-word">
-                    <a class="button" href="https://learn.keyy.org/" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#7B16FF; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all" bgcolor="#7B16FF" align="center">Go to my feed</a>
+                    <a class="button" href="https://learn.keyy.org/" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#34D1C3; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all" bgcolor="#34D1C3" align="center">Go to my feed</a>
                   </td>
                 </tr>
               </table>
@@ -203,11 +203,11 @@
 
               <ul style="line-height:1.4; margin:24px 0; padding:0; text-align:left; list-style-type:none" align="left">
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://twitter.com/withgrindery" style="color:#1D2129; text-decoration:none">Follow @withgrindery on Twitter</a>
+                  <a href="https://twitter.com/keyyedu" style="color:#1D2129; text-decoration:none">Follow @KeyyEdu on Twitter</a>
                 </li>
 
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://learn.keyy.org/spectrum/hugs-n-bugs" style="color:#1D2129; text-decoration:none">Report bugs</a> · <a href="https://learn.keyy.org/spectrum/feature-requests" style="color:#1D2129; text-decoration:none">Request
+                  <a href="https://learn.keyy.org/keyy-support/bugs" style="color:#1D2129; text-decoration:none">Report bugs</a> · <a href="https://learn.keyy.org/keyy-support/ideas" style="color:#1D2129; text-decoration:none">Request
                     a feature</a>
                 </li>
               </ul>
