--- a/email-templates/privateCommunityRequestApproved.html
+++ b/email-templates/privateCommunityRequestApproved.html
@@ -51,7 +51,7 @@
     }
 
     a {
-      color: #7B16FF;
+      color: #34D1C3;
       text-decoration: none;
     }
 
@@ -230,7 +230,7 @@
     }
 
     .button {
-      background-color: #7B16FF;
+      background-color: #34D1C3;
       display: block;
       color: #FFF !important;
       padding: 12px 0px;
@@ -409,11 +409,11 @@
 
               <ul>
                 <li>
-                  <a href="https://twitter.com/withgrindery">Follow @withgrindery on Twitter</a>
+                  <a href="https://twitter.com/keyyedu">Follow @KeyyEdu on Twitter</a>
                 </li>
 
                 <li>
-                  <a href="https://learn.keyy.org/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://learn.keyy.org/spectrum/feature-requests">Request
+                  <a href="https://learn.keyy.org/keyy-support/bugs">Report bugs</a> · <a href="https://learn.keyy.org/keyy-support/ideas">Request
                     a feature</a>
                 </li>
               </ul>
