--- a/built-email-templates/newRepliesInThreads.html
+++ b/built-email-templates/newRepliesInThreads.html
@@ -12,8 +12,7 @@
     }
   }
   END_CONFIG
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+--><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -90,13 +89,13 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-community-header" style="padding:16px 16px 0">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" width="32" style="word-break:break-word">
-                          <a href="https://learn.keyy.org/{{ community.slug }}" class="block" style="color:#7B16FF; text-decoration:none; display:block">
+                          <a href="https://learn.keyy.org/{{ community.slug }}" class="block" style="color:#34D1C3; text-decoration:none; display:block">
                             <img src="{{ community.profilePhoto }}" width="24" height="24" style="border:none; border-radius:4px; display:inline-block; margin-right:8px">
                           </a>
                         </td>
 
                         <td valign="middle" style="word-break:break-word">
-                          <a href="https://learn.keyy.org/{{ community.slug }}" class="block" style="color:#7B16FF; text-decoration:none; display:block">
+                          <a href="https://learn.keyy.org/{{ community.slug }}" class="block" style="color:#34D1C3; text-decoration:none; display:block">
                             <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:0; display:inline-block; font-weight:400" align="left">{{community.name}} ({{channel.name}})</p>
                           </a>
                         </td>
@@ -106,7 +105,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-title" style="border-bottom:1px solid #DAE4F2; padding:8px 16px 16px">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" style="word-break:break-word">
-                          <a href="https://learn.keyy.org/thread/{{ id }}" class="block" style="color:#7B16FF; text-decoration:none; display:block">
+                          <a href="https://learn.keyy.org/thread/{{ id }}" class="block" style="color:#34D1C3; text-decoration:none; display:block">
                             <h3 style="color:#16171A; font-size:16px; font-weight:500; margin-top:0; text-align:left; line-height:1.4; margin-bottom:0" align="left">{{content.title}}</h3>
                           </a>
                         </td>
@@ -117,13 +116,13 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-byline" style="padding:16px 16px 8px">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" width="32" style="word-break:break-word">
-                          <a href="https://learn.keyy.org/users/{{ sender.username }}" class="block" style="color:#7B16FF; text-decoration:none; display:block">
+                          <a href="https://learn.keyy.org/users/{{ sender.username }}" class="block" style="color:#34D1C3; text-decoration:none; display:block">
                             <img src="{{ sender.profilePhoto }}" width="24" height="24" style="border:none; border-radius:40px; display:inline-block; margin-right:8px">
                           </a>
                         </td>
 
                         <td valign="middle" style="word-break:break-word">
-                          <a href="https://learn.keyy.org/users/{{ sender.username }}" class="block" style="color:#7B16FF; text-decoration:none; display:block">
+                          <a href="https://learn.keyy.org/users/{{ sender.username }}" class="block" style="color:#34D1C3; text-decoration:none; display:block">
                             <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:15px; margin-top:0; display:inline-block; font-weight:400" align="left">{{sender.name}}</p>
                           </a>
                         </td>
@@ -137,7 +136,7 @@
                           <table cellpadding="0" cellspacing="0" class="reply-body" style="color:#16171A; display:inline-block; margin-bottom:2px; max-width:100%">
                             <tr width="100%" cellpadding="0" cellspacing="0">
                               <td valign="middle" style="word-break:break-word">
-                                <a href="https://learn.keyy.org/thread/{{ ../id }}" class="block" style="color:#7B16FF; text-decoration:none; display:block">
+                                <a href="https://learn.keyy.org/thread/{{ ../id }}" class="block" style="color:#34D1C3; text-decoration:none; display:block">
                                   {{{content.body}}}
                                 </a>
                               </td>
@@ -152,7 +151,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-actions multi" style="padding:16px; padding-bottom:0">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" class="action-top" style="word-break:break-word">
-                          <a href="https://learn.keyy.org/thread/{{ id }}" class="button" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#7B16FF; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all" bgcolor="#7B16FF" align="center">
+                          <a href="https://learn.keyy.org/thread/{{ id }}" class="button" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#34D1C3; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all" bgcolor="#34D1C3" align="center">
                             View conversation
                           </a>
                         </td>
@@ -210,11 +209,11 @@
 
               <ul style="line-height:1.4; margin:24px 0; padding:0; text-align:left; list-style-type:none" align="left">
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://twitter.com/withgrindery" style="color:#1D2129; text-decoration:none">Follow @withgrindery on Twitter</a>
+                  <a href="https://twitter.com/keyyedu" style="color:#1D2129; text-decoration:none">Follow @KeyyEdu on Twitter</a>
                 </li>
 
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://learn.keyy.org/spectrum/hugs-n-bugs" style="color:#1D2129; text-decoration:none">Report bugs</a> · <a href="https://learn.keyy.org/spectrum/feature-requests" style="color:#1D2129; text-decoration:none">Request
+                  <a href="https://learn.keyy.org/keyy-support/bugs" style="color:#1D2129; text-decoration:none">Report bugs</a> · <a href="https://learn.keyy.org/keyy-support/ideas" style="color:#1D2129; text-decoration:none">Request
                     a feature</a>
                 </li>
               </ul>
