--- a/email-templates/newCommunityWelcome.html
+++ b/email-templates/newCommunityWelcome.html
@@ -51,7 +51,7 @@
     }
 
     a {
-      color: #7b16ff;
+      color: #34D1C3;
       text-decoration: none;
     }
 
@@ -232,7 +232,7 @@
     /* Buttons ------------------------------ */
 
     .button {
-      background-color: #7B16FF;
+      background-color: #34D1C3;
       display: block;
       color: #FFF !important;
       padding: 12px 0px;
@@ -421,7 +421,7 @@
                     <table class="button-group" width="100%">
                       <tr>
                         <td>
-                          <a class="button button-twitter" href="https://twitter.com/share?text=Come hang out with me in the {{community.name}} learning group on @withgrindery!&amp;url=https://learn.keyy.org/{{community.slug}}">Share
+                          <a class="button button-twitter" href="https://twitter.com/share?text=Come hang out with me in the {{community.name}} learning group on @KeyyEdu!&amp;url=https://learn.keyy.org/{{community.slug}}">Share
                             on Twitter</a>
                         </td>
                       </tr>
@@ -479,8 +479,8 @@
                     <div class="section-divider"></div>
                     <h2 class="section-title">More to come...</h2>
                     <p>We're working on new features for learning group builders just like you - if you have ideas, feel
-                      free to <a href="https://learn.keyy.org/spectrum/feature-requests">request new features</a>. And
-                      if you happen to come across any bugs, <a href="https://learn.keyy.org/spectrum/hugs-n-bugs">we're
+                      free to <a href="https://learn.keyy.org/keyy-support/ideas">request new features</a>. And
+                      if you happen to come across any bugs, <a href="https://learn.keyy.org/keyy-support/bugs">we're
                         listening to you.</a></p>
                     <p>&nbsp;</p>
                   </td>
@@ -497,11 +497,11 @@
               </p>
               <ul>
                 <li>
-                  <a href="https://twitter.com/withgrindery">Follow @withgrindery on Twitter</a>
+                  <a href="https://twitter.com/keyyedu">Follow @KeyyEdu on Twitter</a>
                 </li>
 
                 <li>
-                  <a href="https://learn.keyy.org/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://learn.keyy.org/spectrum/feature-requests">Request
+                  <a href="https://learn.keyy.org/keyy-support/bugs">Report bugs</a> · <a href="https://learn.keyy.org/keyy-support/ideas">Request
                     a feature</a>
                 </li>
               </ul>
