Updating email templates

--- a/email-templates/mentionInMessage.html
+++ b/email-templates/mentionInMessage.html
@@ -552,8 +552,9 @@
                 </li>
               </ul>
 
-              <p>Keyy is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
-                States</p>
+              <p>Keyy, Inc.<br />1280 W Main St. Suite 41<br />San Diego, CA 92020<br />United
+                States
+              </p>
             </td>
           </tr>
         </table>
