--- a/built-email-templates/newDirectMessage.html
+++ b/built-email-templates/newDirectMessage.html
@@ -135,8 +135,9 @@
                 </li>
               </ul>
 
-              <p class="sub" style="line-height:1.5em; text-align:left; color:#747E8D; font-size:14px; margin:0; margin-bottom:16px; padding:0" align="left">Keyy is made by GitHub, Inc.<br>88 Colin P Kelly Jr St, San Francisco, CA
-                94107<br> United States</p>
+              <p class="sub" style="line-height:1.5em; text-align:left; color:#747E8D; font-size:14px; margin:0; margin-bottom:16px; padding:0" align="left">Keyy, Inc.<br>1280 W Main St. Suite 41<br>San Diego, CA 92020<br>United
+                States
+              </p>
             </td>
           </tr>
         </table>
