--- a/built-email-templates/validate-email.html
+++ b/built-email-templates/validate-email.html
@@ -108,7 +108,7 @@
                 </li>
               </ul>
 
-              <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:12px" align="left">Keyy is made by GitHub, Inc.<br>88 Colin P Kelly Jr St, San Francisco, CA 94107<br>United
+              <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:12px" align="left">Keyy, Inc.<br>1280 W Main St. Suite 41<br>San Diego, CA 92020<br>United
                 States
               </p>
             </td>
