--- a/email-templates/communityInvite.html
+++ b/email-templates/communityInvite.html
@@ -447,7 +447,7 @@
                     a feature</a>
                 </li>
               </ul>
-              <p>Keyy is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
+              <p>Keyy, Inc.<br />1280 W Main St. Suite 41<br />San Diego, CA 92020<br />United
                 States
               </p>
             </td>
