--- a/email-templates/newDirectMessage.html
+++ b/email-templates/newDirectMessage.html
@@ -508,8 +508,9 @@
                 </li>
               </ul>
 
-              <p class="sub">Keyy is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA
-                94107<br /> United States</p>
+              <p class="sub">Keyy, Inc.<br />1280 W Main St. Suite 41<br />San Diego, CA 92020<br />United
+                States
+              </p>
             </td>
           </tr>
         </table>
